--- a/templates/cards.html
+++ b/templates/cards.html
@@ -17,6 +17,13 @@
 
   <!-- Mount Llambda's card on to this element. -->
   <div id="llambda"></div>
+
+  <div id="Philip"></div>
+
+  <div id="Ted"></div>
+
+  <div id="all-cards"></div>
+
 </div>
 
 {% endblock %}
